<resources>
    <string name="app_name">shopping list</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_item">Add Item</string>
    <string name="enter_item">Enter Item</string>
    <string name="enterItemHint">Item Name</string>
    <string name="quantityHint">Quantity</string>
    <string name="colorHint">Color</string>
    <string name="sizeHint">Size</string>
    <string name="save_button">Save</string>
    <string name="item_name">Item Name</string>
    <string name="item_quantity">Quantity</string>
    <string name="item_date">Date Added</string>
    <string name="item_color">Color</string>
    <string name="item_size">Size</string>
    <string name="confirm_text">Are you sure ?</string>
    <string name="no_text">no</string>
    <string name="yes_text">yes</string>
</resources>