<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp">

            <TextView
                android:id="@+id/enterItemTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_item"
                android:textStyle="italic"
                android:textSize="18sp"
                android:layout_centerHorizontal="true"/>

            <EditText
                android:id="@+id/itemNameEditText"
                android:layout_below="@+id/enterItemTextView"
                android:hint="@string/enterItemHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/quantityEditText"
                android:layout_below="@+id/itemNameEditText"
                android:hint="@string/quantityHint"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/colorEditText"
                android:layout_below="@+id/quantityEditText"
                android:hint="@string/colorHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/sizeEditText"
                android:layout_below="@+id/colorEditText"
                android:hint="@string/sizeHint"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/saveBtn"
                android:layout_below="@+id/sizeEditText"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:text="@string/save_button"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>