<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">

            <TextView
                android:id="@+id/item_name"
                android:text="@string/item_name"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/item_quantity"
                android:text="@string/item_quantity"
                android:layout_below="@+id/item_name"
                android:layout_marginTop="4dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/item_color"
                android:text="@string/item_color"
                android:layout_below="@+id/item_quantity"
                android:layout_marginTop="4dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/item_size"
                android:text="@string/item_size"
                android:layout_below="@+id/item_color"
                android:layout_marginTop="4dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <TextView
                android:id="@+id/item_date"
                android:text="@string/item_date"
                android:layout_below="@+id/item_size"
                android:layout_marginTop="4dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <TableRow
                android:layout_alignParentEnd="true"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/item_date">

                <Button
                    android:id="@+id/editBtn"
                    android:layout_height="30dp"
                    android:layout_width="30dp"
                    android:layout_marginEnd="15dp"
                    android:background="@android:drawable/ic_menu_edit"
                    />

                <Button
                    android:id="@+id/deleteBtn"
                    android:layout_height="30dp"
                    android:layout_width="30dp"
                    android:layout_marginEnd="15dp"
                    android:background="@android:drawable/ic_delete"
                    />

            </TableRow>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>